<resources>
    <string name="app_name">My Firstapp</string>
    <string name="Txtitel">ป้ายจราจร</string>
    <string name="MoreInfo">ข้อมูลเพิ่มเติม</string>
    <string name="aboutMe">About Me</string>
    <string name="name"><b>ชื่อฉัน</b>ชื่อ นาย ทรัพย์สิน วงษ์ศรีทา</string>
    <string name="idsdu"><b>รหัส</b> u5711020660005</string>
    <string name="com"><b>หลักสูตร</b>หลักสูตร วิทยาการคอม</string>
    <string name="facebook"><b>เฟส</b>Bas Saiburn</string>
    <string name="Tell"><b>เบอร์ติดต่อ</b>เบอร์โทร 0618208267</string>
</resources>
